
2004-02-29  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>
	* Npgsql/NpgsqlConnection.cs: Better handling of connection encoding. Added support for encoding and connection timeout in connection string.
	* Npgsql/NpgsqlConnectorPool.cs: Added support for timeout and max connection pool.

2004-02-28  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

	* Npgsql/NpgsqlConnector.cs: Added support for connection encoding.
	* Npgsql/NpgsqlConnection.cs: Better handling of connection encoding.
	* Npgsql/NpgsqlCommand.cs: Fixed an Invalid Index error when executing ExecuteScalar() method with an empty resultset. Thanks Lynn A. Roth for the fix. This fixes bug 687 in gborg.


2004-02-25  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

	* Npgsql/NpgsqlDataReader.cs: Fixed a OutOfBoundsException when trying to access an element after have read all elements. Now it throws an InvalidOperationException.

	* Npgsql/NpgsqlConnection.cs: Fixed Unicode handling. This also fixes bug 695 in gborg. Thanks Sami Kuhmonen <feenix@iqs.fi> for the patch.

 
2004-02-16  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

        * Npgsql/NpgsqlDataReader.cs: Removed a log line which reduced the conne
ction startup time in 300 milliseconds.

2004-02-16  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

        * NpgsqlConnection.cs: Added support for Unicode encoding. Fixes feature
request 534 on gborg. Thanks Ivar <ivar@lumisoft.ee> for pointing it out.

2004-02-16 Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

        * Npgsql/NpgsqlStartupPacket.cs: Added code to set datestyle to iso when
connecting using protocol 3.0 version. Thanks Sami Kuhmonen <feenix@iqs.fi> for pointing it out.

2004-02-14  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com.br>

        * Npgsql/NpgsqlCommand.cs: Fixed a bug when handling queries which return no data. Thanks Morten Mertner <morten@mertner.com> for the fix.

2004-02-10  Francisco Figueiredo Jr. <fxjrlists@yahoo.com.br>
	